feat: implement RBAC, move to testcontainers from h2